[releng] Bump java heap size to 24g and enable CMS GC